# MCG

./: CMakeLists.txt  main.cpp
